--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3090,3 +3090,7 @@ p {
   .ivu-form .ivu-form-item-label{
     padding-bottom: 0px !important;
   }
+  .table_image img{
+    width: 60px;
+    height: 60px;
+  }
