--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3094,4 +3094,9 @@ p {
     width: 60px;
     height: 60px;
   }
-  
+  .float-right{
+    float: right
+  }
+  .bold{
+    font-weight: bold;
+  }
